# deliteAI

./: .clang-format  .editorconfig  .gitignore  .ruff.toml  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  config.yml  setup.sh
coreruntime/: .gitignore  CMakeLists.txt  README.md  build.py  requirements.txt  setup.py
coreruntime/core_utils/: CMakeLists.txt
coreruntime/core_utils/include/core_utils/: atomic_ptr.hpp  fmt.hpp  ne_md5.hpp  shard.hpp
coreruntime/core_utils/src/: ne_md5.cpp  shard.cpp
coreruntime/delitepy/: CMakeLists.txt  README.md  requirements.txt
coreruntime/delitepy/docs_template/: builtins.md  conf.py  index.md  modules.md  statements.md
coreruntime/delitepy/library_stubs/: .gitignore  pyproject.toml  setup.py
coreruntime/delitepy/scripts/: build_docs.sh  render_jinja2_templates.py
coreruntime/nimble_client/: CMakeLists.txt
coreruntime/nimble_client/src/: main.cpp
coreruntime/nimble_diff/: CMakeLists.txt
coreruntime/nimble_diff/src/: nimble_diff.cpp
coreruntime/nimble_shard/: CMakeLists.txt
coreruntime/nimble_shard/src/: nimble_shard.cpp
coreruntime/nimblenet/: CMakeLists.txt
coreruntime/nimblenet/asset_manager/include/: asset_manager.hpp
coreruntime/nimblenet/asset_manager/src/: asset_manager.cpp
coreruntime/nimblenet/command_center/include/: command_center.hpp
coreruntime/nimblenet/command_center/src/: command_center.cpp
coreruntime/nimblenet/config_manager/include/: config_manager.hpp
coreruntime/nimblenet/config_manager/src/: config_manager.cpp
coreruntime/nimblenet/core_sdk/include/: core_sdk.hpp  core_sdk_constants.hpp  core_sdk_structs.hpp  nimble_exec_info.hpp  nimblenet_py_interface.hpp
coreruntime/nimblenet/core_sdk/src/: core_sdk.cpp  extra_core_sdk.cpp  nimble_exec_info.cpp
coreruntime/nimblenet/cross_platform/include/: executor_structs.h  nimble_net_util.hpp
coreruntime/nimblenet/data_variable/include/: concurrent_executor_variable.hpp  custom_func_data_variable.hpp  data_variable.hpp  data_variable_enums.hpp  data_variable_templates.ipp  dataframe_variable.hpp  exception_data_variable.hpp  frontend_data_variable.hpp  future_data_variable.hpp  iterable_data_variable.hpp  list_data_variable.hpp  llm_data_variable.hpp  map_data_variable.hpp  match_object_data_variable.hpp  model_nimble_net_variable.hpp  nimble_net_data_variable.hpp  nimble_net_internal_data_variable.hpp  pre_processor_nimble_net_variable.hpp  range_data_variable.hpp  raw_event_store_data_variable.hpp  regex_data_variable.hpp  single_variable.hpp  stream_data_variable.hpp  tensor_data_variable.hpp  tuple_data_variable.hpp
coreruntime/nimblenet/data_variable/src/: concurrent_executor_variable.cpp  custom_func_data_variable.cpp  data_variable.cpp  dataframe_variable.cpp  filtered_dataframe_variable.cpp  future_data_variable.cpp  list_data_variable.cpp  llm_data_variable.cpp  map_data_variable.cpp  match_object_data_variable.cpp  model_nimble_net_variable.cpp  nimble_net_data_variable.cpp  nimble_net_internal_data_variable.cpp  pre_processor_nimble_net_variable.cpp  raw_event_store_data_variable.cpp  regex_data_variable.cpp  single_variable.cpp  stream_data_variable.cpp  tensor_data_variable.cpp
coreruntime/nimblenet/database/include/: database.hpp  database_constants.hpp
coreruntime/nimblenet/database/src/: database.cpp
coreruntime/nimblenet/executors/: CMakeLists.txt
coreruntime/nimblenet/executors/onnx/: CMakeLists.txt
coreruntime/nimblenet/job_scheduler/include/: asset_download_job.hpp  asset_load_job.hpp  base_job.hpp  future.hpp  internet_job.hpp  job.hpp  job_scheduler.hpp  locked_mpmc_queue.hpp  script_load_job.hpp  script_ready_job.hpp
coreruntime/nimblenet/job_scheduler/src/: asset_download_job.cpp  asset_load_job.cpp  base_job.cpp  job_scheduler.cpp  script_load_job.cpp  script_ready_job.cpp
coreruntime/nimblenet/llm_executors/: CMakeLists.txt
coreruntime/nimblenet/llm_executors/include/: base_llm_executor.hpp  executorch_llm_executor.hpp  gemini_nano_executor.hpp  onnx_llm_executor.hpp
coreruntime/nimblenet/llm_executors/src/: base_llm_executor.cpp  executorch_llm_executor.cpp  gemini_nano_executor.cpp  onnx_llm_executor.cpp
coreruntime/nimblenet/native_interface/include/: native_interface.hpp  native_interface_constants.hpp  native_interface_structs.hpp
coreruntime/nimblenet/native_interface/src/: native_interface.cpp
coreruntime/nimblenet/nimble_net/: CMakeLists.txt
coreruntime/nimblenet/nimble_net/include/: nimblejson.hpp  nimblenet.h  nimblenet.hpp
coreruntime/nimblenet/nimble_net/src/: nimblejson.cpp  nimblenet.cpp
coreruntime/nimblenet/pre_processor_database_manager/include/: database.hpp  database_constants.hpp
coreruntime/nimblenet/pre_processor_database_manager/src/: pre_processor_database_manager.cpp
coreruntime/nimblenet/resource_loader/include/: resource_downloader.hpp  resource_loader.hpp
coreruntime/nimblenet/resource_loader/src/: resource_downloader.cpp  resource_loader.cpp
coreruntime/nimblenet/resource_manager/include/: resource_manager.hpp  resource_manager_constants.hpp  resource_manager_structs.hpp
coreruntime/nimblenet/resource_manager/src/: resource_manager.cpp  resource_manager_structs.cpp
coreruntime/nimblenet/retriever/include/: retriever.hpp
coreruntime/nimblenet/retriever/src/: retriever.cpp
coreruntime/nimblenet/server_api/: CMakeLists.txt
coreruntime/nimblenet/server_api/include/: server_api.hpp  (+2 more)
coreruntime/nimblenet/simulation_manager/: CMakeLists.txt
coreruntime/nimblenet/task_manager/: CMakeLists.txt
coreruntime/platform/android/: CMakeLists.txt
coreruntime/platform/ios/: CMakeLists.txt
coreruntime/platform/unix/: CMakeLists.txt
coreruntime/scripts/: gen_python_ast.py  setup.sh
coreruntime/tests/unittests/: add_event_end_to_end_test.cpp  command_center_test.cpp  end_to_end_tests.cpp  native_interface_test.cpp  nimbletest.cpp  nimbletest.hpp  scripting_test.cpp  stream_test.cpp  tests_util.cpp  tests_util.hpp  tests_util_structs.cpp  tests_util_structs.hpp  util_test.cpp
coreruntime/tests/utils/: download_from_s3.py
(+545 files in other folders)
